Se creo directiva para la imagen de perfil y previsualizacion (#162)
* Se creo directiva para la imagen por defecto y previsualizacion

* revise rebase

* Volver a hacer funcionar guardar imagen. Mostrar imagen previa y seleccionada en editar perfil

* ProfileService en Specs

* ProfileService no

* Adding EOF

--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -107,7 +107,7 @@ ion-modal-view.item-form
           show-error(array-messages='modalVm.messages.peso')
 
         label.item.item-input.item-stacked-label
-          span.input-label {{::("item.cantidad"|translate|uppercase)}}
+          span.input-label {{::("item.cantidad"|translate)}}
           input(
             min='0'
             type='number'
