--- a/app/templates/profile/info/edit.jade
+++ b/app/templates/profile/info/edit.jade
@@ -17,16 +17,26 @@ ion-modal-view
         legend {{::("client.formLegend"|translate)}}
 
         label.item.item-input.item-input--no-borders.item-stacked-label
-          span.input-label {{::("user.image"|translate|uppercase)}}
-        .picture-uploader(
-          type = "file"
+          span.input-label {{::("user.image"|translate)}}
+        .row.images-previews
+          .img-wrapper.col-offset-25.col-50
+            img( ng-if="piVm.hasImageFile(piVm.userEdit)" 
+                  ngf-src="piVm.userEdit.custom_image"
+                  style="max-width: 70px; max-height: 70px;border-radius: 50%;"
+            )
+            user-image( user="piVm.userEdit" ng-if="!piVm.hasImageFile(piVm.userEdit)" 
+                  style="max-width: 70px; max-height: 70px;border-radius: 50%;"
+            )
+        .uploader(
+          type="file"
           ngf-select
-          ng-model = "piVm.userEdit.custom_image"
+          ng-model="piVm.userEdit.custom_image"
           ngf-capture = "'camera'"
-          accept = "image/*"
+          accept="image/*"
         )
           .img-placeholder
-          .img-placeholder--legend {{::("client.addImage"|translate)}}
+          .img-placeholder--legend {{::("user.changeImagen"|translate)}}
+
         show-error(array-messages='piVm.user.custom_image')
 
         label.item.item-input.item-stacked-label(
