bootstrapping customer orders (#166)
* bootstrapping customer orders

wip

* building customer orders

wip

* list previous customer orders

* tweaking cart

* tweaking cart

* polyfill phantomjs (Array.prototype.find)

* address specs

* building cart view

* fixing stuff I lost during the rebase

--- a/app/templates/cart/checkout.jade
+++ b/app/templates/cart/checkout.jade
@@ -28,7 +28,7 @@ ion-modal-view.cart-page
             span.placeholder(ng-if="!cartVm.checkoutForm.deliver_at")
               | {{ ::('cart.deliverNow' | translate) }}
             span(ng-if="cartVm.checkoutForm.deliver_at")
-              | {{ cartVm.checkoutForm.deliver_at | formatDate:'DD/MM/YYYY HH:mm' }}
+              | {{ cartVm.checkoutForm.deliver_at | formatDate }}
           .button.button-clear.button-positive.button-small(
             ng-if="cartVm.checkoutForm.deliver_at"
             ng-click="cartVm.clearDeliveryTime()"
@@ -65,7 +65,9 @@ ion-modal-view.cart-page
         .wrapper(
           ng-if="cartVm.checkoutForm.delivery_method === 'shipping'"
           )
-          label.item.item-input.item-input--no-borders.item-stacked-label.select-list-label
+          label.item.item-input.item-input--no-borders.item-stacked-label.select-list-label(
+            ng-class="{'item-error': cartVm.messages.customer_address_id}"
+          )
             span.input-label {{::("cart.deliveryAddress"|translate)}}
           ion-list
             ion-item.select-list-item(
@@ -75,8 +77,11 @@ ion-modal-view.cart-page
             )
               i.ion-android-checkmark-circle
               span {{ address.nombre }} ({{ address.direccion_uno }})
+          show-error(array-messages='cartVm.messages.customer_address_id')
 
-        label.item.item-input.item-input--no-borders.item-stacked-label.select-list-label
+        label.item.item-input.item-input--no-borders.item-stacked-label.select-list-label(
+          ng-class="{'item-error': cartVm.messages.customer_billing_address_id}"
+        )
           span.input-label {{::("billingAddress.legendForm"|translate)}}
         ion-list
           ion-item.select-list-item(
@@ -86,6 +91,7 @@ ion-modal-view.cart-page
           )
             i.ion-android-checkmark-circle
             span {{billingAddress.razon_social}} ({{billingAddress.direccion}})
+        show-error(array-messages='cartVm.messages.customer_billing_address_id')
 
     ion-footer-bar.bar-stable.bar-footer--tall
       button.button.button-outline.button-energized(
