--- a/app/styles/cart/cart.scss
+++ b/app/styles/cart/cart.scss
@@ -17,19 +17,61 @@
   }
 }
 
-.cart-preview {
+.customer-order-preview {
   background-color: $light-grey;
+
+  .cart-delivery-address {
+    color: $grey-secondary;
+    padding: 15px;
+    font-family: Montserrat-Regular;
+    letter-spacing: -0.5px;
+    position: relative;
+    padding-right: 70px; // room for btn
+
+    span {
+      margin-right: 5px;
+    }
+
+    .placeholder-title {
+      text-transform: uppercase;
+    }
+
+    .button-clear {
+      position: absolute;
+      top: 5px;
+      right: 0;
+      text-transform: uppercase;
+      font-size: 14px;
+    }
+  }
 
   .provider-profile-section {
     margin-bottom: 20px;
 
+    .provider-profile--title,
+    .provider-profile--subtitle {
+      padding: 15px;
+    }
+
     .provider-profile--title {
       color: $base-yellow;
       background-color: $white;
-      padding: 15px;
       text-transform: uppercase;
       font-size: 14px;
       font-family: Montserrat-Regular;
+    }
+
+    .provider-profile--subtitle {
+      color: $grey-secondary;
+      font-family: Montserrat-Regular;
+      font-size: 13px;
+      line-height: 13px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+
+      span {
+        margin-right: 5px;
+      }
     }
   }
 
