Bind click to edit modal in cart

--- a/app/templates/cart/customer-order.jade
+++ b/app/templates/cart/customer-order.jade
@@ -19,4 +19,6 @@
     span + $1.50
     span {{ ::('cart.shippingCosts' | translate) }}
   .provider-items-in-cart
-    slick-item(settings="cartVm.slickSettings" data="providerProfile")
+    slick-item(settings="cartVm.slickSettings"
+               data="providerProfile"
+               on-click="cartVm.openEditModal")
