Add client/server side validation for min value on product counter

--- a/app/templates/cart/order-item.jade
+++ b/app/templates/cart/order-item.jade
@@ -11,6 +11,7 @@ ion-modal-view
     .item-image
       img(ng-src="{{cartVm.currentItem.provider_item.imagenes[0]}}")
     product-counter(options="cartVm.counterOptions")
+    show-error(array-messages="cartVm.updateErrors.cantidad")
     .item-comment
       textarea(
         msd-elastic
