--- a/app/styles/common/buttons.scss
+++ b/app/styles/common/buttons.scss
@@ -45,7 +45,7 @@
 }
 
 .button-energized,
-.button-positive {
+.button-positive:not(.button-small) {
   padding: 3px 18px;
   line-height: 30px;
   font-family: Montserrat-Regular;
