--- a/app/templates/menu/menu-provider.jade
+++ b/app/templates/menu/menu-provider.jade
@@ -9,19 +9,39 @@ ion-side-menus(enable-menu-with-back-views='false')
     ion-header-bar.bar-stable
     ion-content
       ion-list
-        ion-item(menu-close='' ui-sref='provider.profile-provider.info')
+        ion-item(
+          menu-close
+          nav-clear
+          ui-sref='provider.profile-provider.info'
+        )
           | {{::("menu.provider.profile"|translate)}}
         ion-item
           | {{::("menu.provider.orders"|translate)}}
-        ion-item(menu-close='' ui-sref='provider.items.index')
+        ion-item(
+          menu-close
+          nav-clear
+          ui-sref='provider.items.index'
+        )
           | {{::("menu.provider.products"|translate)}}
-        ion-item(menu-close='' ui-sref='provider.clients.index')
+        ion-item(
+          menu-close
+          nav-clear
+          ui-sref='provider.clients.index'
+        )
           | {{::("menu.provider.clients"|translate)}}
         ion-item
           | {{::("menu.provider.account"|translate)}}
-        ion-item(menu-close='' ui-sref='provider.dispatchers.index')
+        ion-item(
+          menu-close
+          nav-clear
+          ui-sref='provider.dispatchers.index'
+        )
           | {{::("menu.provider.dispatchers"|translate)}}
-        ion-item(menu-close='' ui-sref='provider.offices')
+        ion-item(
+          menu-close
+          nav-clear
+          ui-sref='provider.offices'
+        )
           | {{::("menu.provider.establishments"|translate)}}
         ion-item
           | {{::("menu.provider.promotionsAndDiscounts"|translate)}}
@@ -33,5 +53,9 @@ ion-side-menus(enable-menu-with-back-views='false')
           | {{::("menu.logout"|translate)}}
         ion-item.gray-item
           | {{::("menu.changeTo"|translate)}}
-        ion-item.user-type(menu-close='' ui-sref='app.categories.index')
+        ion-item.user-type(
+          menu-close
+          nav-clear
+          ui-sref='app.categories.index'
+        )
           | {{::("menu.user.buyer"|translate)}}
