--- a/app/styles/cart/edit-item.scss
+++ b/app/styles/cart/edit-item.scss
@@ -5,30 +5,39 @@
 }
 
 .cart-edit-item-modal {
-  max-width: 85%;
-  min-height: 80%;
-  max-height: 95%;
   margin: 15px auto;
   left: 0;
   right: 0;
+
+  @media (max-width: $grid-responsive-md-break) {
+    min-height: 80%;
+    max-height: 95%;
+    max-width: 85%;
+  }
 
   ion-content {
     padding: 0 10px 10px 10px;
   }
 
   .ion-nav-buttons {
-    text-align: right;
+    position: absolute;
+    right: -5px;
+    top: -15px;
 
     .button-clear.button-small {
       min-height: 30px;
       font-size: 14px;
       color: $base-yellow;
+
+      i {
+        font-size: 20px
+      }
     }
   }
 
   .item-title {
     font-size: 15px;
-    margin: 0 0 10px 0;
+    margin: 25px 0 10px 0;
     text-align: center;
     font-family: Montserrat-Light;
     text-transform: uppercase;
