--- a/app/styles/forms/resource-form-picture-uploader.scss
+++ b/app/styles/forms/resource-form-picture-uploader.scss
@@ -20,4 +20,21 @@
       }
     }
   }
+
+  .images-previews {
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+    cursor: pointer;
+
+    .img-wrapper {
+      display: flex;
+      padding: 5px;
+    }
+
+    img {
+      margin: auto;
+      max-width: 100%;
+      max-height: 130px;
+    }
+  }
 }
