--- a/app/styles/customer/show.scss
+++ b/app/styles/customer/show.scss
@@ -14,6 +14,7 @@
     .user-name {
       text-align: center;
       font-size: 26px;
+      line-height: 30px;
       margin: 15px 0;
       color: $dark;
     }
