--- a/app/templates/profile-provider/profileProvider.jade
+++ b/app/templates/profile-provider/profileProvider.jade
@@ -10,7 +10,7 @@ ion-view(
     .row
       .col.profile-header
         img.img-profile(
-          ng-src="{{ siteVm.getProviderImageURL() }}"
+          ng-src="{{ siteVm.provider.logotipo_url }}"
         )
         .user-name {{ siteVm.userName }}
     .profile-body
