se agrego nav en index de address

--- a/app/templates/profile/addresses/index.jade
+++ b/app/templates/profile/addresses/index.jade
@@ -1,42 +1,47 @@
-ion-content.addresses-wrapper(
-  scroll="false"
+ion-view(
+  view-title="{{::('profile.tabs.addresses'|translate)}}"
 )
-  .address-wrapper(
-    ng-repeat="address in ::pfaVm.addresses"
+  ion-nav-title
+    .alt-logo
+  ion-content.addresses-wrapper(
+    scroll="false"
   )
-    .list.list-inset.list--no-borders.text-center.actions-wrapper
-      button.button.button-clear.button-positive(
-        ng-click="pfaVm.redirectToUpdateAddressView(address.id)"
-      ) {{::('globals.edit'|translate)}}
-    
-    .list.list-inset.list--no-borders.resource-details-table
-      p.resource-detail-title {{ address.nombre || address.direccion_uno }}
-      .row
-        .col.col-50.label {{::('profile.addresses.city'|translate)}}
-        .col.col-50.value {{address.ciudad}}
-      .row
-        .col.col-50.label {{::('profile.addresses.parish'|translate)}}
-        .col.col-50.value {{address.parroquia}}
-      .row
-        .col.col-50.label {{::('profile.addresses.neighborhood'|translate)}}
-        .col.col-50.value {{address.barrio}}
-      .row
-        .col.col-50.label {{::('profile.addresses.addressOne'|translate)}}
-        .col.col-50.value {{address.direccion_uno}}
-      .row
-        .col.col-50.label {{::('profile.addresses.addressTwo'|translate)}}
-        .col.col-50.value {{address.direccion_dos}}
-      .row
-        .col.col-50.label {{::('profile.addresses.zipCode'|translate)}}
-        .col.col-50.value {{address.codigo_postal}}
-      .row
-        .col.col-50.label {{::('profile.addresses.reference'|translate)}}
-        .col.col-50.value {{address.referencia}}
-      .row
-        .col.col-50.label {{::('profile.addresses.telephoneNumber'|translate)}}
-        .col.col-50.value {{address.numero_convencional}}
+    .address-wrapper(
+      ng-repeat="address in ::pfaVm.addresses"
+    )
+      .list.list-inset.list--no-borders.text-center.actions-wrapper
+        button.button.button-clear.button-positive(
+          ng-click="pfaVm.redirectToUpdateAddressView(address.id)"
+        ) {{::('globals.edit'|translate)}}
 
-  .list.list-inset.list--no-borders.text-center.actions-wrapper
-    button.button.button-outline.button-energized(
-      ng-click="pfaVm.redirectToNewAddressView()"
-    ) {{::("profile.addresses.addAddressBtnText"|translate)}}
+      .list.list-inset.list--no-borders.resource-details-table
+        p.resource-detail-title {{ address.nombre || address.direccion_uno }}
+        .row
+          .col.col-50.label {{::('profile.addresses.city'|translate)}}
+          .col.col-50.value {{address.ciudad}}
+        .row
+          .col.col-50.label {{::('profile.addresses.parish'|translate)}}
+          .col.col-50.value {{address.parroquia}}
+        .row
+          .col.col-50.label {{::('profile.addresses.neighborhood'|translate)}}
+          .col.col-50.value {{address.barrio}}
+        .row
+          .col.col-50.label {{::('profile.addresses.addressOne'|translate)}}
+          .col.col-50.value {{address.direccion_uno}}
+        .row
+          .col.col-50.label {{::('profile.addresses.addressTwo'|translate)}}
+          .col.col-50.value {{address.direccion_dos}}
+        .row
+          .col.col-50.label {{::('profile.addresses.zipCode'|translate)}}
+          .col.col-50.value {{address.codigo_postal}}
+        .row
+          .col.col-50.label {{::('profile.addresses.reference'|translate)}}
+          .col.col-50.value {{address.referencia}}
+        .row
+          .col.col-50.label {{::('profile.addresses.telephoneNumber'|translate)}}
+          .col.col-50.value {{address.numero_convencional}}
+
+    .list.list-inset.list--no-borders.text-center.actions-wrapper
+      button.button.button-outline.button-energized(
+        ng-click="pfaVm.redirectToNewAddressView()"
+      ) {{::("profile.addresses.addAddressBtnText"|translate)}}
