--- a/app/templates/profile/profile.jade
+++ b/app/templates/profile/profile.jade
@@ -1,5 +1,5 @@
 ion-view(
-  view-title='{{::profile.title|translate}}'
+  view-title="{{::('profile.title')|translate}}"
 )
   ion-nav-title
     .alt-logo
