--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -10,7 +10,10 @@ ion-view(
           .col.col-50 {{ providerProfile.nombre_establecimiento || providerProfile.razon_social }}
           .col.col-25 {{ ::("order.providerProfile.quantity" |translate) }}
           .col.col-25 {{ ::("order.providerProfile.price" |translate) }}
-        .item.row(ng-repeat='item in providerProfile.customer_order_items')
-          .col.col-50 {{ ::item.provider_item.titulo}}
-          .col.col-25 {{ ::('X' + item.cantidad) }}
-          .col.col-25 {{ ::(item.provider_item_precio_cents | priceCurrency | currency) }}
+        div(ng-repeat='item in providerProfile.customer_order_items')
+          .item.row
+            .col.col-50 {{ ::item.provider_item.titulo}}
+            .col.col-25 {{ ::('X' + item.cantidad) }}
+            .col.col-25 {{ ::(item.provider_item_precio_cents | priceCurrency | currency) }}
+          .item.row(ng-if="item.observaciones")
+            .col.col-100.col--elastic {{ ::('OBSERVACIONES : ' + item.observaciones) }}
